<resources>
    <string name="app_name">Shrouded Haven</string>
    <string name="shrouded_haven">Shrouded Haven</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="hello_user">Hello User</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="log_out">Log Out</string>
    <string name="manage_trails">Manage Trails</string>
    <string name="manage_location">Manage Location</string>
    <string name="manage_user">Manage User</string>
    <string name="log_out_admin">Log Out</string>
    <string name="temp_admin">Temp Admin</string>
    <string name="list_of_trails">List of Trails</string>
    <string name="search">Search</string>
    <string name="saved_trails">Saved Trails</string>
    <string name="trails">Trails</string>
    <string name="trail">Trail</string>
    <string name="enter_the_trail">Enter the Trail</string>
    <string name="length">length</string>
    <string name="enter_the_length">Enter the Length</string>
    <string name="no_saved_trails">No saved trails.</string>
    <string name="sharedPreference_file_key">daclinkPreferenceFileNameTrails</string>
    <string name="preference_userId_key">preferenceUserIdKey</string>
    <string name="edit_trails">Trails</string>
</resources>